# rotalabs-cascade

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/core/: index.html
api/event/: index.html
api/learning/: index.html
api/plugins/: index.html
docs/: event-context.md  getting-started.md  index.md
docs/api/: core.md  event.md  learning.md  plugins.md
docs/tutorials/: apls-learning.md  basic-cascade.md
event-context/: index.html
getting-started/: index.html
search/: search_index.json
src/rotalabs_cascade/: __init__.py
src/rotalabs_cascade/core/: __init__.py  config.py  context.py  engine.py  event.py
src/rotalabs_cascade/evaluation/: __init__.py  evaluator.py
src/rotalabs_cascade/learning/: __init__.py  cost_analyzer.py  pattern_extractor.py  proposal.py  rule_generator.py
src/rotalabs_cascade/optimization/: __init__.py  optimizer.py
src/rotalabs_cascade/plugins/: __init__.py  builtin.py
tests/: __init__.py  conftest.py  test_config.py  test_context.py  test_engine.py  test_evaluator.py  test_learning.py  test_plugins.py
tutorials/apls-learning/: index.html
tutorials/basic-cascade/: index.html
