[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotalabs-cascade"
version = "1.0.0"
description = "Configuration-driven orchestration engine for multi-stage decision routing"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Subhadip Mitra", email = "subhadip@rotalabs.ai" },
    { name = "Rotalabs Research", email = "research@rotalabs.ai" },
]
keywords = [
    "orchestration",
    "workflow",
    "routing",
    "decision",
    "cascade",
    "pipeline",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
structlog = [
    "structlog>=23.0.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "rotalabs-cascade[structlog,observability]",
]

[project.urls]
Homepage = "https://rotalabs.ai"
Documentation = "https://rotalabs.github.io/rotalabs-cascade/"
Repository = "https://github.com/rotalabs/rotalabs-cascade"

[tool.hatch.build.targets.wheel]
packages = ["src/rotalabs_cascade"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
